# projekt_zespolowy

./: .gitignore  README.md  ogrodnik.docx
baza_danych/: db.sql  erd.mwb
dokumentacja/: ogrodnik.docx
dokumentacja/diagramy/: diagram_stanow.uxf  diagram_stanów.uxf  new.uxf  pomiar.drawio  pomiar_analogowy.drawio  rejestracja_stacji.drawio
dokumentacja/diagramy/stare/: projekt_zespolowy.vpp
dokumentacja/schematy_wiadomosci/: konfiguracja.json  pomiary.json  rejestracja.json
serwer/: Readme.MD  pom.xml
serwer/src/main/resources/: application.yaml
serwer/src/test/java/com/praca/inzynierska/gardenservicemanagement/: GardenServiceManagementApplicationTests.java
serwer/src/test/resources/: application.yaml
serwer_be/: pom.xml
serwer_be/src/main/java/com/praca/inzynierska/gardenservicemanagement/: GardenServiceManagementApplication.java
serwer_be/src/test/resources/: application.yaml
stacja_pomiarowa/firmware/: sdkconfig  sdkconfig.old
stacja_pomiarowa/firmware/components/enviromental_measurements/: CMakeLists.txt  enviromental_measurements.c  sh_measurement.c
stacja_pomiarowa/firmware/components/enviromental_measurements/include/: enviromental_measurements.h  sh_measurement.h
stacja_pomiarowa/firmware/components/ic_driver/: CMakeLists.txt  ads1115.c  dht11.c  ds18b20.c  mcp23017.c  mux.c
stacja_pomiarowa/firmware/components/ic_driver/include/: ads1115.h  dht11.h  drivers.h  ds18b20.h  mcp23017.h  mux.h
stacja_pomiarowa/firmware/components/measurements/: CMakeLists.txt  analog_measurements.c  dht11_measurements.c  one_wire_measurements.c
stacja_pomiarowa/firmware/components/measurements/include/: analog_measurements.h  dht11_measurements.h  one_wire_measurements.h
stacja_pomiarowa/firmware/components/one_wire_bus/: CMakeLists.txt
stacja_pomiarowa/firmware/components/station/: CMakeLists.txt  station.c
stacja_pomiarowa/firmware/components/station/include/: station.h
stacja_pomiarowa/firmware/components/watering/: CMakeLists.txt  watering.c
stacja_pomiarowa/firmware/components/watering/include/: watering.h
stacja_pomiarowa/firmware/main/: CMakeLists.txt  main.c  main.h  station.h
stacja_pomiarowa/schemat/: fp-info-cache  stacja_pomiarowa.kicad_prl  stacja_pomiarowa.kicad_pro  stacja_pomiarowa.kicad_sch  untitled.kicad_sch
stacja_pomiarowa/schemat/Library.pretty/: Esp-DevKitC.kicad_mod
stacja_pomiarowa/schemat/stacja_pomiarowa_panel/: czujniki_analogowe.kicad_sch  czujniki_dht11_ds18b20.kicad_sch  fp-info-cache  przekazniki.kicad_sch  stacja_pomiarowa_panel.kicad_prl  stacja_pomiarowa_panel.kicad_pro  stacja_pomiarowa_panel.kicad_sch
stacja_pomiarowa/schemat/stacja_pomiarowa_uklad/: stacja_pomiarowa_uklad.kicad_pcb  stacja_pomiarowa_uklad.kicad_prl  stacja_pomiarowa_uklad.kicad_pro  stacja_pomiarowa_uklad.kicad_sch
(+122 files in other folders)
