idf_component_register(SRCS "main.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES "ic_driver"
                    PRIV_REQUIRES "json"
                    PRIV_REQUIRES "esp_wifi"
                    PRIV_REQUIRES "nvs_flash"
                    PRIV_REQUIRES "esp_adc"
                    PRIV_REQUIRES "lwip"
                    PRIV_REQUIRES "freertos"
                    PRIV_REQUIRES "esp_common"
                    PRIV_REQUIRES "esp_event"
                    PRIV_REQUIRES "mqtt"
                    PRIV_REQUIRES "driver"
                    PRIV_REQUIRES "station")
